# worknado

./: .gitignore  README.md  pyproject.toml
src/worknado/: jobs.py  worker.py
src/worknado/config/: __init__.py  redis_config.py  settings.py
