[project]
name = "worknado"
version = "0.1.0"
description = ""
authors = [
    {name = "ayukumar34",email = "bigtexascompsci@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis (>=6.2.0,<7.0.0)",
    "rq (>=2.4.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "worknado", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
